k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:

  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: flask-backend

        imagePullPolicy: Never

        ports:
        - containerPort: 5000
