k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo-deployment

spec:

  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:

    metadata:
      labels:
        app: mongo

    spec:

      containers:

      - name: mongo

        image: mongo:7

        ports:
        - containerPort: 27017
