k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:

  #type: ClusterIP
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 5508
      targetPort: 5508
