k8s/mongo-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mongo-service

spec:

  type: ClusterIP



  selector:
    app: mongo

  ports:

    - protocol: TCP

      port: 27017
      targetPort: 27017
