k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: localhost

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:
            name: frontend-service

            port:
              number: 5508
